# vectorlitedb

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  example.py  github_issue_template.md  lint.yml  pyproject.toml  pytest.ini  setup.cfg  test_functionality.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  docs.yml  lint.yml  publish.yml  python-tests.yml  test.yml  tests.yml
benchmarks/: __init__.py  benchmark_insert.py  benchmark_search.py
docs/: api.md  file_format.md  index.md  quickstart.md
examples/: basic_usage.py  local_rag.py  personal_assistant.py
src/vectorlitedb/: __init__.py  db.py
src/vectorlitedb/api/: __init__.py  db.py
src/vectorlitedb/cli/: __init__.py
src/vectorlitedb/core/: __init__.py  distances.py
src/vectorlitedb/core/index/: __init__.py  flat.py
src/vectorlitedb/search/: __init__.py
src/vectorlitedb/storage/: __init__.py  file_format.py  persistence.py
src/vectorlitedb/utils/: __init__.py  serialization.py  validation.py
tests/: conftest.py  test_crud.py  test_database.py  test_db.py  test_distances.py  test_edge_cases.py  test_persistence.py  test_search.py  test_storage.py
