[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorlitedb"
version = "0.1.0"
description = "SQLite for embeddings — fast, local, private vector database"
readme = "README.md"
authors = [
    {name = "Nagendra Dhanakeerthi", email = "nagendra.dhanakeerthi@gmail.com"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
keywords = ["vector database", "embeddings", "similarity search", "RAG", "AI", "edge AI"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.0.270",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "numpy>=1.20.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://vectorlite.tech"
Documentation = "https://docs.vectorlite.tech"
Repository = "https://github.com/vectorlitedb/vectorlitedb"
Issues = "https://github.com/vectorlitedb/vectorlitedb/issues"

[project.scripts]
vectorlitedb = "vectorlitedb.cli:main"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=vectorlitedb"
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]